First step is done

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,12 +19,13 @@
   "phone_number": "Phone number",
   "passport_data": "Passport data",
   "passport_number": "Passport number and serial number",
+  "address": "Address",
   "address_data": "Address data",
   "country": "Country",
   "city": "City",
   "street": "Street",
-  "house": "House number",
-  "apartment": "Apartment number",
+  "house_number": "House number",
+  "apartment_number": "Apartment number",
   "ticket_class": "Ticket class",
   "economy_class": "Economy class",
   "business_class": "Business class",
