--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -21,12 +21,13 @@
   "phone_number": "Номер телефона",
   "passport_data": "Пасспортные данные",
   "passport_number": "Серия и номер пасспорта",
+  "address": "Адрес",
   "address_data": "Адресная информация",
   "country": "Страна",
   "city": "Город",
   "street": "Улица",
-  "house": "Номер дома",
-  "apartment": "Номер квартиры",
+  "house_number": "Номер дома",
+  "apartment_number": "Номер квартиры",
   "ticket_class": "Класс билета",
   "economy_class": "Эконом-класс",
   "business_class": "Бизнесс-класс",
